<resources>
    <string name="app_name">WeightTracker</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="welcome_message">Welcome to weight tracker!</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="set_date">Set Date</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="pounds">Pounds</string>
    <string name="lb">lbs</string>
    <string name="kilograms">Kilograms</string>
    <string name="kg">kg</string>
    <string name="height">Height</string>
    <string name="centimeters">Centimeters</string>
    <string name="cm">cm</string>
    <string name="foot">Foot</string>
    <string name="ft">ft</string>
    <string name="inches">Inches</string>
    <string name="in">in</string>
    <string name="foot_inches">Foot &amp; inches</string>
    <string name="profile_setup_warning_message">Please complete the form</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="progress_history">Progress History</string>
    <string name="statistics">Statistics</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_goals">Edit goals</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_weight">Invalid weight</string>
    <string name="invalid_height">Invalid height</string>
    <string name="unit_of_measurement">Unit of measurement</string>
    <string name="add_progress">Add Progress</string>
    <string name="edit_progress">Edit Progress</string>
    <string name="new_weight">New weight</string>
    <string name="new_weight_with_unit">New weight (%s)</string>
    <string name="weight_with_unit">Weight (%s)</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="target_weight">Target weight</string>
    <string name="target_weight_with_unit">Target weight (%s)</string>
    <string name="due_date">Due date</string>
    <string name="not_applicable">N/A</string>
    <string name="status">Status</string>
    <string name="remaining">Remaining</string>
    <string name="initial_weight">Initial weight</string>
    <string name="current_weight">Current weight</string>
    <string name="percent_complete_format">%.2f%%</string>
    <string name="complete">Complete</string>
    <string name="weight_lost">Weight lost</string>
    <string name="weight_in_kilograms">Weight in kilograms</string>
    <string name="weight_in_pounds">Weight in pounds</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="warning">Warning</string>
    <string name="date_already_exists">Date already exists. Do you want to replace existing entry?</string>
    <string name="initial_body_fat_index">Initial Body Fat Index</string>
    <string name="current_body_fat_index">Current Body Fat Index</string>
    <string name="target_body_fat_index">Target Body Fat Index</string>
    <string name="body_fat_index">Body Fat Index</string>
    <string name="body_fat_index_percentage">Body Fat Index (%)</string>
    <string name="target_body_fat_index_percentage">Target Body Fat Index (%)</string>
    <string name="new_body_fat_index_percentage">New Body Fat Index (%)</string>
    <string name="initial">Initial</string>
    <string name="current">Current</string>
    <string name="target">Target</string>
    <string name="other_details">Other Details</string>
    <string name="current_mass_distribution">Current Mass Distribution</string>
    <string name="fat_mass">Fat mass</string>
    <string name="muscle_mass">Muscle mass</string>
    <string name="profile_details">Profile Details</string>

    <!-- String Arrays -->
    <string-array name="arr_weight_unit">
        <item>@string/kilograms</item>
        <item>@string/pounds</item>
    </string-array>

    <string name="val_kilograms" translatable="false">Kg</string>
    <string name="val_pounds" translatable="false">Lb</string>

    <string-array name="arr_weight_values">
        <item>@string/val_kilograms</item>
        <item>@string/val_pounds</item>
    </string-array>

    <string-array name="arr_height_unit">
        <item>@string/centimeters</item>
        <item>@string/foot_inches</item>
    </string-array>

    <string name="val_centimeters" translatable="false">Cm</string>
    <string name="val_foot_inches" translatable="false">FtIn</string>

    <string-array name="arr_height_values">
        <item>@string/val_centimeters</item>
        <item>@string/val_foot_inches</item>
    </string-array>

</resources>
