<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_white_48dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_progress_history"
            android:icon="@drawable/ic_watch_later_white_48dp"
            android:title="@string/progress_history" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_timeline_white_48dp"
            android:title="@string/statistics" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_white_48dp"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_face_white_48dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
