<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/unit_of_measurement">

        <ListPreference
            android:title="@string/weight"
            android:key="perf_key_weight_unit"
            android:dialogTitle="@string/weight"
            android:entries="@array/arr_weight_unit"
            android:entryValues="@array/arr_weight_values"
            android:defaultValue="@string/val_kilograms" />

        <ListPreference
            android:title="@string/height"
            android:key="perf_key_height_unit"
            android:dialogTitle="@string/height"
            android:entries="@array/arr_height_unit"
            android:entryValues="@array/arr_height_values"
            android:defaultValue="@string/val_centimeters" />

    </PreferenceCategory>

</PreferenceScreen>