<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_new_weight_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_weight" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <TextView
        android:id="@+id/lbl_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        android:background="?android:attr/selectableItemBackground" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />

</LinearLayout>